<resources>
    <string name="app_name">Lestari</string>
    <string name="home">Home</string>
    <string name="watch">Watch</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string name="digital_museum">Museum Digital</string>
    <string name="desc_museum">Rasakan sensasi menjelajahi museum Budaya Indonesia secara digital.</string>
    <string name="explore">Jelajahi</string>
    <string name="event">Event</string>
    <string name="article">Artikel</string>
    <string name="culture">Budaya</string>
    <string name="traditional_house">Rumah Adat</string>
    <string name="traditional_ceremony">Upacara Adat</string>
    <string name="aksara">Aksara</string>
    <string name="image">Gambar</string>
    <string name="video">Video</string>
    <string name="search">Cari</string>
    <string name="seni">Seni</string>
    <string name="publisher">%1$s, %2$s</string>
    <string name="close">Close</string>
    <string name="back">Kembali</string>
    <string name="forum">Forum</string>
    <string name="logo">Logo</string>
    <string name="training">Pelatihan</string>
    <string name="enter">Enter</string>
    <string name="solo_jawa_tengah">Solo, Jawa Tengah</string>
    <string name="edit">Ubah</string>
    <string name="location">Lokasi</string>
    <string name="name">Name</string>
    <string name="competition">Lomba</string>
    <string name="perform">Pentas Seni</string>
    <string name="welcome">Selamat Datang</string>
    <string name="description_register">Silahkan daftar terlebih dahulu untuk mulai mendalami Budaya Indonesia</string>
    <string name="welcome_back">Selamat Datang \nKembali,</string>
    <string name="description_login">Silahkan masuk terlebih dahulu untuk lanjut mendalami Budaya Indonesia</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Lupa Password?</string>
    <string name="login">Masuk</string>
    <string name="or">atau</string>
    <string name="connect_with_google">Sambungkan dengan Google</string>
    <string name="not_yet_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="reminder">Ingatkan Saya</string>
    <string name="date">Tanggal   : %1$s</string>
    <string name="time">Pukul     : %1$s</string>
    <string name="location_arg">Lokasi    : %1$s</string>
    <string name="image_event">Image Event</string>
    <string name="join">Gabung</string>
    <string name="dance">Tari</string>
    <string name="music">Music</string>
    <string name="batik">Batik</string>
    <string name="profile_picture">Foto Profile</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="no_telephone">No.Telepon</string>
    <string name="address">Alamat</string>
    <string name="update">Perbarui</string>
    <string name="language">Bahasa</string>
    <string name="dark_mode">Mode Malam</string>
    <string name="notification">Notifikasi</string>
    <string name="setting">Pengaturan</string>
    <string name="log_out">Keluar</string>
    <string name="contact_support">Hubungi Kami</string>
    <string name="my_profile">Profil Saya</string>
    <string name="actor">Artis : %1$s</string>
    <string name="organizer">"Organizer : %1$s"</string>
    <string name="address_value">Alamat :</string>
    <string name="training_value">Latihan :</string>
    <string name="brief_history">Sejarah Singkat</string>
    <string name="aleaapiraxy_gmail_com">aleaapiraxy@gmail.com</string>
    <string name="alea_piraxy">Alea Piraxy</string>
    <string name="a">A</string>
    <string name="hi_alea_piraxy">Hi, Alea Piraxy</string>
    <string name="sanggar_seni_sarwi_retno_budaya">Sanggar Seni Sarwi Retno Budaya</string>
    <string name="_50_anggota">50 Anggota</string>
    <string name="_1351_177_292">1351–177–292</string>
    <string name="lestariofficial_gmail_com">lestariofficial@gmail.com</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="_081217364956">081217364956</string>
    <string name="your_not_have_notif">Anda belum mendapatkan notifikasi</string>
    <string name="adress_alea">Jl. Jendral Sudirman No. 2 Komplek Balaikota SurakartaKelurahan Kampung Baru, Kecamatan Pasar Kliwon, Kota Surakarta</string>
    <string name="_3_forum">3 Forum</string>
    <string name="_3_pelatihan">3 Pelatihan</string>
</resources>