<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SelamatDatang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="72dp"
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:text="@string/welcome_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_login"
            style="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SelamatDatang" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/outline_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Email"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/outline_lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:drawableEnd="@drawable/outline_remove_red_eye"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/LupaPassword"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <Button
            android:id="@+id/button"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LupaPassword" />

        <TextView
            android:id="@+id/Atau"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_connect_google"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/connect_with_google"
            app:icon="@drawable/ic_google"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Atau" />

        <TextView
            android:id="@+id/Belom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginStart="96dp"
            android:text="@string/not_yet_account"
            app:layout_constraintEnd_toStartOf="@+id/Daftar"
            app:layout_constraintStart_toStartOf="@id/btn_connect_google"
            app:layout_constraintTop_toBottomOf="@+id/btn_connect_google" />

        <TextView
            android:id="@+id/Daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="96dp"
            android:text="@string/register"
            android:textColor="@color/md_theme_light_primary"
            app:layout_constraintEnd_toEndOf="@+id/btn_connect_google"
            app:layout_constraintStart_toEndOf="@+id/Belom"
            app:layout_constraintBottom_toBottomOf="@+id/Belom"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>