<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.community.fragment.detail.CommunityInfo">

    <TextView
        android:id="@+id/judulLokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_value"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/lokasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        tools:text="Jl. Bima No. 8 Serengan RT. 04 RW. II, Surakarta."
        app:layout_constraintStart_toEndOf="@+id/judulLokasi"
        app:layout_constraintTop_toTopOf="@+id/judulLokasi"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/judulLatihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/training_value"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/judulLokasi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/judulLokasi"
        app:layout_constraintTop_toBottomOf="@+id/lokasi" />

    <TextView
        android:id="@+id/latihan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Tari-tarian, Tembang, Teather, Musik"
        app:layout_constraintEnd_toEndOf="@+id/lokasi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lokasi"
        app:layout_constraintTop_toTopOf="@+id/judulLatihan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/brief_history"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/judulLatihan"
        app:layout_constraintTop_toBottomOf="@+id/judulLatihan" />

    <TextView
        android:id="@+id/sejarah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/community"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>