<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="184dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/museum"
            android:scaleType="centerCrop"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_museum"
                android:textAllCaps="true"
                style="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/white"
                android:layout_marginBottom="8dp"
                android:paddingHorizontal="24dp"
                app:layout_goneMarginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/desc_museum"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_explore"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>